--- a/src/ThFnsc.Nobreak.Core/ThFnsc.Nobreak.Core.csproj
+++ b/src/ThFnsc.Nobreak.Core/ThFnsc.Nobreak.Core.csproj
@@ -1,14 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.1" />
-    <PackageReference Include="System.IO.Ports" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0-rc.1.22426.10" />
+    <PackageReference Include="System.IO.Ports" Version="7.0.0-rc.1.22426.10" />
   </ItemGroup>
 
 </Project>
