--- a/src/ThFnsc.Nobreak/ThFnsc.Nobreak.csproj
+++ b/src/ThFnsc.Nobreak/ThFnsc.Nobreak.csproj
@@ -1,14 +1,21 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
+	<ContainerImageName>thiagofnsc/nobreakapi</ContainerImageName>
+	<ContainerImageTag>latest</ContainerImageTag>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+	<ContainerPort Include="80" Type="tcp" />
+  </ItemGroup>
+	
+  <ItemGroup>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="Microsoft.NET.Build.Containers" Version="0.1.8" />
   </ItemGroup>
 
   <ItemGroup>
