--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -8,6 +8,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Setup .NET SDK
         uses: actions/setup-dotnet@v2
+        with:
+          dotnet-version: '7'
       - name: Publish
         run: dotnet publish -c Release --sc --os linux -a x64 -p:PublishProfile=DefaultContainer -p:PublishSingleFile=true -p:DebugType=embedded -p:PublishReadyToRun=true -p:IsTransformWebConfigDisabled=true
       - name: Docker Login
