--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -10,6 +10,7 @@ jobs:
         uses: actions/setup-dotnet@v2
         with:
           dotnet-version: '7.0'
+          include-prerelease: true
       - name: Publish
         run: dotnet publish -c Release --sc --os linux -a x64 -p:PublishProfile=DefaultContainer -p:PublishSingleFile=true -p:DebugType=embedded -p:PublishReadyToRun=true -p:IsTransformWebConfigDisabled=true
       - name: Docker Login
